--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,14 @@
-micronautVersion=3.4.4
+micronautVersion=3.5.0
 junitVersion=5.8.2
 log4jVersion=2.17.2
+
+org.gradle.logging.level=info
+
+# Customizations
+org.gradle.configureondemand = true
+
+# Kotlin annotation processor settings
+kapt.incremental.apt=true
+kapt.use.worker.api=true
+kapt.include.compile.classpath=false
+kapt.useBuildCache=true
